<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.ResetPasswordActivity">

    <!-- Imagem bola azul claro superior direito -->
    <ImageView
        android:id="@+id/watermarkTopRight"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="-150dp"
        android:alpha="0.6"
        android:rotation="-40"
        android:src="@drawable/circulo_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Imagem e nome da emopresa-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_moca" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_empresa_minusculo"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat_bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/texto_reset"
            android:textColor="@color/cinza"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/round_back_dark_blue5_15">

            <EditText
                android:id="@+id/inputResetSenha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/iconeResetSenhaVer"
                android:layout_toEndOf="@+id/iconeResetSenha"
                android:background="@android:color/transparent"
                android:hint="@string/nova_senha"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/cinza"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iconeResetSenha"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:adjustViewBounds="true"
                android:padding="8dp"
                android:src="@drawable/chave_icon" />

            <ImageView
                android:id="@+id/iconeResetSenhaVer"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:src="@drawable/mostrar_senha" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/round_back_dark_blue5_15">

            <EditText
                android:id="@+id/inputConfirmeSenhaReset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/iconeConfirmeSenhaResetVer"
                android:layout_toEndOf="@+id/iconeSenhaReset"
                android:background="@android:color/transparent"
                android:hint="@string/nova_senha_confirme"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/cinza"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iconeSenhaReset"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:adjustViewBounds="true"
                android:padding="8dp"
                android:src="@drawable/chave_icon" />

            <ImageView
                android:id="@+id/iconeConfirmeSenhaResetVer"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:src="@drawable/mostrar_senha" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/round_back_primary_15"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ja_possui_conta"
                android:textColor="@color/cinza"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/entrarTextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/entrar"
                android:textColor="@color/azul_botao"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


    <!-- Imagem bola azul escuro inferior esquerdo -->
    <ImageView
        android:id="@+id/watermarkBottomLeft"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-120dp"
        android:layout_marginBottom="-170dp"
        android:alpha="0.6"
        android:rotation="-15"
        android:src="@drawable/circulo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>